# aprendizaje-profundo

./: .gitattributes  .gitignore  README.md  index.html  main.py  pyproject.toml
Datasets/: GME-20211001.csv
Exercises/: Procesamiento del lenguaje natural - Clasificación de diagnósticos a partir de síntomas-2.ipynb  Procesamiento del lenguaje natural - Clasificación de diagnósticos a partir de síntomas.ipynb  Procesamiento del lenguaje natural - Clasificación de etiquetas en StackOverflow QAs.ipynb  Procesamiento del lenguaje natural - Reconociento entidades en few-nerd.ipynb  Redes neuronales artificiales - Comparación de rendimiento de modelos.ipynb  Redes neuronales artificiales - Regresión con el California housing dataset.ipynb
Models/: music_generator.pt
Notebooks/: .swp  Procesamiento del lenguaje natural - Clasificación de texto con CNN.ipynb  Procesamiento del lenguaje natural - Clasificación de texto con RNN.ipynb  Procesamiento del lenguaje natural - Creación y visualización de embeddings.ipynb  Procesamiento del lenguaje natural - Implementación de word2vec basado en skip-grams.ipynb  Redes convolucionales - Clasificación de dígitos con redes convolucionales.ipynb  Redes convolucionales - Clasificación de imágenes.ipynb  Redes neuronales artificiales - Métricas para problemas de clasificación y regresión.ipynb  Redes neuronales artificiales - Perceptrón simple y perceptrón multicapa.ipynb  Redes neuronales artificiales - Regularización dropout.ipynb  Redes recurrentes - Apilando redes recurrentes.ipynb  Redes recurrentes - Generación de música.ipynb  (+7 more)
(+63 files in other folders)
