[project]
name = "aprendizaje-profundo"
version = "0.0.2"
description = "Repositorio para almacenar contenidos que uso een diferentes asignaturas de grado y máster"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
]
